--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@types/body-parser": "^1.19.1",
     "@types/express": "^4.17.13",
     "@types/node": "^16.6.2",
-    "body-parser": "^1.19.0",
+    "bip32": "^2.0.6",
+    "bitcoinjs-lib": "^5.2.0",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
