--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "rimraf": "^3.0.2",
+    "tiny-secp256k1": "^1.1.6",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
