--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,11 @@
     "esModuleInterop": true,
     /* Advanced Options */
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "typeRoots": [
+      "src/types",
+      "node_modules/@types"
+    ]
   },
   "lib": [
     "es2015"
